fix contrast issue, added bg for login and register

--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgb(234, 234, 234);
+    background-color: #FAEBEFFF;
     color: rgb(78, 78, 78);
     font-family: 'Muli', sans-serif;
     display: flex;
