--- a/public/styles/skeleton.css
+++ b/public/styles/skeleton.css
@@ -87,7 +87,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100%;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 /* alignment for icon and label */
